--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "doc": "docs",
     "test": "test"
   },
+  "engines": {
+    "node": "6.10.x",
+    "npm": "3.10.x"
+  },
   "dependencies": {
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
@@ -22,7 +26,8 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "webpack --watch"
   },
   "repository": {
     "type": "git",
