--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "webpack --watch"
+    "postinstall": "webpack"
   },
   "repository": {
     "type": "git",
